# Drone_project

./: README.md
drone_sim/: CMakeLists.txt
drone_sim/config/: gz_bridge.yaml
drone_sim/launch/: launch.py
drone_sim/models/zephyr_delta_wing/: model.config  model.sdf  zephyr_delta_wing.sdf
drone_sim/urdf/: zephyr_delta_wing.xacro
drone_sim/worlds/: my_world.sdf  my_world.world
nav_pkg/: CMakeLists.txt  package.xml
nav_pkg/config/: gazebo_ros2_bridge.yaml
nav_pkg/launch/: nav_zephyr.launch.py
nav_pkg/src/: autopilot.cpp  low_level_cnt.cpp  rtabmap_nav.cpp  vision_twist_node.cpp
